--- a/examples/fetch.html
+++ b/examples/fetch.html
@@ -10,16 +10,15 @@
         import init from './generated/fetch.js';
         new Promise(function (resolve, reject) {
             window.addEventListener("load", () => {
-                init('./generated/fetch.wasm').then((m) => resolve(m));
+                init('./generated/fetch_bg.wasm').then((m) => resolve(m));
             })
-        })
-            .then(m => {
-                try {
-                    m.run();
-                } catch (err) {
-                    console.error(`Exception catched: ${err}`)
-                }
-            });
+        }).then(m => {
+            try {
+                m.run();
+            } catch (err) {
+                console.error(`Exception catched: ${err}`)
+            }
+        });
     </script>
 </body>
 
